# video-manager

./: .gitignore  .oxlintrc.json  CLAUDE.md  components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
app/: app.css  root.tsx  routes.ts
app/components/ui/: alert-dialog.tsx  combobox.tsx  dialog.tsx  dropdown-menu.tsx  select.tsx  slider.tsx  toast.tsx
app/features/recording/: db.ts  types.ts
app/features/recording/components/: AudioLevelMeter.tsx  ClipPreview.tsx  LiveClipsTimeline.tsx  OBSSetupModal.tsx  RecordingControls.tsx  RecordingHistory.tsx  SilenceIndicator.tsx
app/features/recording/hooks/: use-audio-level.ts  use-obs-recording.ts  use-recording-session.ts
app/features/video-editor/: use-speech-detector.ts
app/hooks/: use-global-settings.ts  use-toast.tsx  use-updater.ts
app/routes/: recordings.$id.tsx  recordings._index.tsx  recordings.tsx
scripts/: download-ffmpeg.sh  release.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_video_filepath_and_clip_archived.sql  003_restructure_recordings_takes_clips.sql
src-tauri/src/: lib.rs  main.rs
